edited layout and style

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Stick&family=Akaya+Telivigala&family=Roboto&display=swap">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
+        rel="stylesheet">
 
     <!-- MY CSS -->
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/layout1.css">
 </head>
 
 <body>
@@ -107,16 +108,15 @@
         <h3>Dave Hullen</h3>
 
         <ul>
-            <li>Why do you love teaching?
-                I enjoy seeing students create what they imagine.</li>
-            <li>What/who inspires you about your teaching subject?
-                The students' capabilities inspire me.</li>
-            <li>What is your favourite pastime?
-                Spending time with whānau.</li>
-            <li>A fun fact about you...
-                I didn't know what PTO in the corner of a piece of paper meant until recently. It still keeps me up at
-                night
-                how much I might have missed out on.</li>
+            <li>Why do you love teaching?</li>
+            <p>I enjoy seeing students create what they imagine.</p>
+            <li>What/who inspires you about your teaching subject?</li>
+            <p>The students' capabilities inspire me.</p>
+            <li>What is your favourite pastime?</li>
+            <p>Spending time with whānau.</p>
+            <li>A fun fact about you...</li>
+            <p>I didn't know what PTO in the corner of a piece of paper meant until recently. It still keeps me up at
+                night how much I might have missed out on.</p>
         </ul>
     </main>
 
