--- a/html/notices.html
+++ b/html/notices.html
@@ -8,12 +8,13 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Stick&family=Akaya+Telivigala&family=Roboto&display=swap">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
+        rel="stylesheet">
 
     <!-- MY CSS -->
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style1.css">
+    <link rel="stylesheet" href="../css/layout1.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="school-trips.html">School Trips</a>
         <a href="sports.html">Sports</a>
         <a href="notices.html">Notices</a>
@@ -32,24 +33,26 @@
 
     <main>
         <h2>Notices</h2>
-        
-        <h3>Principals letter</h3>
+        <div> <img src="../images/kaitlyn-pud.jpg" alt="Nikita and Pud">
+            <h3>Boarding House</h3>
 
-        <p>
-            Our upcoming weekend activities are as follows, these activities are subject to the weather and numbers:
+            <p>
+                Our upcoming weekend activities are as follows, these activities are subject to the weather and numbers:
 
-            Friday 12th March Games night
-            Saturday 13th March Picnic lunch and swimming
-            Sunday 14th March Skating at the Bay
+                Friday 12th March Games night
+                Saturday 13th March Picnic lunch and swimming
+                Sunday 14th March Skating at the Bay
 
-            Looking ahead, the Boarding House will close for Easter on Thursday 1st April at 5pm and reopen on Tuesday
-            6th April at 2pm.
+                Looking ahead, the Boarding House will close for Easter on Thursday 1st April at 5pm and reopen on
+                Tuesday
+                6th April at 2pm.
 
 
-            Find us on Facebook Boarding at Craighead
-            Please contact me dockrilltr@craighead.school.nz or phone 684 2251 for any queries about Boarding House
-            life.
-        </p>
+                Find us on Facebook Boarding at Craighead
+                Please contact me dockrilltr@craighead.school.nz or phone 684 2251 for any queries about Boarding House
+                life.
+            </p>
+        </div>
 
         <h3>Uniform</h3>
 
