Mock-Ups (update)
I have made changes to my layout 3 and style 3 to improve my mock-up 3 as it didn't meet the clients standards.

--- a/html/notices.html
+++ b/html/notices.html
@@ -8,13 +8,11 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato:wght@300&family=Lobster+Two&display=swap"
         rel="stylesheet">
-
     <!-- MY CSS -->
-    <link rel="stylesheet" href="../css/style1.css">
-    <link rel="stylesheet" href="../css/layout1.css">
+    <link rel="stylesheet" href="../css/style3.css">
+    <link rel="stylesheet" href="../css/layout3.css">
 </head>
 
 <body>
@@ -33,25 +31,24 @@
 
     <main>
         <h2>Notices</h2>
-        <div> <img src="../images/kaitlyn-pud.jpg" alt="Nikita and Pud">
-            <h3>Boarding House</h3>
+        <h3>Boarding House</h3>
 
-            <p>
-                Our upcoming weekend activities are as follows, these activities are subject to the weather and numbers:
+        <p>
+            Our upcoming weekend activities are as follows, these activities are subject to the weather and numbers:
 
-                Friday 12th March Games night
-                Saturday 13th March Picnic lunch and swimming
-                Sunday 14th March Skating at the Bay
+            Friday 12th March Games night
+            Saturday 13th March Picnic lunch and swimming
+            Sunday 14th March Skating at the Bay
 
-                Looking ahead, the Boarding House will close for Easter on Thursday 1st April at 5pm and reopen on
-                Tuesday
-                6th April at 2pm.
+            Looking ahead, the Boarding House will close for Easter on Thursday 1st April at 5pm and reopen on
+            Tuesday
+            6th April at 2pm.
 
 
-                Find us on Facebook Boarding at Craighead
-                Please contact me dockrilltr@craighead.school.nz or phone 684 2251 for any queries about Boarding House
-                life.
-            </p>
+            Find us on Facebook Boarding at Craighead
+            Please contact me dockrilltr@craighead.school.nz or phone 684 2251 for any queries about Boarding House
+            life.
+        </p>
         </div>
 
         <h3>Uniform</h3>
@@ -120,6 +117,11 @@
             Wellbeing site HOME tab.
             https://sites.google.com/craighead.school.nz/studentswellbeingsite/home/parent-portal
         </p>
+        <div>
+        <img src="../images/kaitlyn-pud.jpg" alt="Nikita and Pud">
+        <img src="../images/olivhud.jpg" alt="Olivia">
+        <img src="../images/philippians-4.8.jpg" alt="Philippians">
+        </div>
     </main>
 
     <footer>
