--- a/html/sports.html
+++ b/html/sports.html
@@ -8,12 +8,11 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Stick&family=Akaya+Telivigala&family=Roboto&display=swap">
-
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato:wght@300&family=Lobster+Two&display=swap"
+        rel="stylesheet">
     <!-- MY CSS -->
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/layout2.css">
 </head>
 
 <body>
@@ -23,7 +22,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="school-trips.html">School Trips</a>
         <a href="sports.html">Sports</a>
         <a href="notices.html">Notices</a>
@@ -60,6 +59,10 @@
             
         </p>
 
+        <div>
+        <img src="../images/ava-young.jpg.JPG" alt="Ava Young">
+        <img src="../images/2021-athletic-sports-champions.jpg" alt="Athletics Champions">
+        </div>
     </main>
 
     <footer>
