--- a/html/notices.html
+++ b/html/notices.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato:wght@300&family=Lobster+Two&display=swap"
         rel="stylesheet">
     <!-- MY CSS -->
-    <link rel="stylesheet" href="../css/style3.css">
-    <link rel="stylesheet" href="../css/layout3.css">
+    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/layout2.css">
 </head>
 
 <body>
@@ -117,7 +117,7 @@
             Wellbeing site HOME tab.
             https://sites.google.com/craighead.school.nz/studentswellbeingsite/home/parent-portal
         </p>
-        <div>
+        <div id="images">
         <img src="../images/kaitlyn-pud.jpg" alt="Nikita and Pud">
         <img src="../images/olivhud.jpg" alt="Olivia">
         <img src="../images/philippians-4.8.jpg" alt="Philippians">
