--- a/html/sports.html
+++ b/html/sports.html
@@ -59,7 +59,7 @@
             
         </p>
 
-        <div>
+        <div id="images">
         <img src="../images/ava-young.jpg.JPG" alt="Ava Young">
         <img src="../images/2021-athletic-sports-champions.jpg" alt="Athletics Champions">
         </div>
