--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato:wght@300&family=Lobster+Two&display=swap"
         rel="stylesheet">
 
     <!-- MY CSS -->
-    <link rel="stylesheet" href="css/style1.css">
-    <link rel="stylesheet" href="css/layout1.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/layout2.css">
+    </style>
 </head>
 
 <body>
@@ -23,16 +23,17 @@
         <h1>Newsletter Term 1 2021</h1>
     </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="school-trips.html">School Trips</a>
-        <a href="sports.html">Sports</a>
-        <a href="notices.html">Notices</a>
-
-    </nav>
+    <div>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="html/school-trips.html">School Trips</a>
+            <a href="html/sports.html">Sports</a>
+            <a href="html/notices.html">Notices</a>
+        </nav>
+    </div>
 
     <main>
-        <h2>2021 term Dates</h2>
+        <h3>2021 term Dates</h3>
         <ul>
             <li>TERM 1: 1 February - 16 April</li>
             <li>TERM 2: 3 May - 2 July</li>
@@ -40,7 +41,7 @@
             <li>TERM 4: 18 Oct - 10 Dec</li>
         </ul>
 
-        <h2>Principals letter</h2>
+        <h3>Principals letter</h3>
 
         <p>
             Ms Glenys Parry
@@ -50,7 +51,9 @@
             spending 5 years in Auckland making jewellery from her Auckland studio. She trained as a teacher at the
             Christchurch College of Education, then spent several years traveling through Africa, the Middle East and
             Europe. From there, she returned to teaching in Christchurch, eventually moving to teach at Craighead in
-            1995.
+            1995. </p>
+
+        <p>
             Ms Parry was an inspirational teacher - evidenced by the quality of Art produced by her Art students. Over
             the years, Craighead Art students achieved numerous Scholarships in Painting, Photography and Sculpture. Her
             students’ folios were often included in the Top Art roadshow, and they achieved many successes in local and
@@ -62,8 +65,9 @@
             deserving of this award for teaching excellence.
             What made Ms Parry a great teacher was her passion, her love of Art, her love of Art practice, and her love
             of creativity. She was kind, caring and collegial. We will miss her. Our thoughts and prayers go out the
-            Parry and Armstrong families, especially her husband Michael and their two sons.
+            Parry and Armstrong families, especially her husband Michael and their two sons. </p>
 
+        <p>
             Education Review Office Evaluation Partner
             Our ERO evaluation partner Mrs Shelley Wyllie conducted her initial visit on Monday of this week. The
             purpose of this meeting was to familiarise herself with the school and its context, and to meet the Chair of
@@ -73,21 +77,25 @@
             will agree upon a specific aspect of our strategic plan upon which to focus our evaluation (likely to be our
             Year 7-10 Curriculum), which will be adjusted to fit in with resource and time constraints. The next meeting
             is on the first day of Term 2, when we will identify existing internal evaluation capability in the school
-            and reach agreement about a useful focus and scope for an evaluation based on our existing priorities.
+            and reach agreement about a useful focus and scope for an evaluation based on our existing priorities. </p>
 
+        <p>
             Wanaka Show weekend
             It is fortunate that the Wanaka Show is able to proceed as planned under Alert Level One. We will again have
             a presence there in our usual spot this Friday and Saturday as part of our regular marketing and promotions
             strategy. We do enjoy meeting up with Old Girls and prospective students and their families. Do pop in and
             visit the Craighead tent if you are coming to this fantastic show.
+
         </p>
 
-        <h2>Student Leader</h2>
+        <h3>Student Leader</h3>
 
         <p>
             Moving to Craighead from a small country school in Year 9 was a shocking and exciting experience. Though I
             feared that I would get mistaken for a Year 7 because of my height, I was eager to get involved with all the
-            new opportunities that Craighead had to offer.
+            new opportunities that Craighead had to offer. </p>
+
+        <p>
             Now, as a Year 13 student who still gets mistaken about my year group due to my height, I am thankful for
             all the experiences Craighead has given me over the years. These experiences have led me to where I am today
             and to have the privilege of being Head Boarder for 2021, alongside Pieta Prouting who has supported me
@@ -97,27 +105,44 @@
             Highlights of my time at Craighead include the many school camps and trips, attending Maadi Cup at Lake
             Karapiro and making the Hanan Shield Rugby team and involvement with other sporting events and committees
             within the school and the wider community. These have allowed me to grow as a person and set goals for
-            myself to strive for success.
+            myself to strive for success. </p>
+
+        <p>
             For 2022, I am hoping to further my study at Lincoln University within the Agriculture sector. Being from a
             family-owned farm and contracting business I have always had an interest in heavy machinery, cropping and
             livestock. I cannot wait to see what opportunities this year brings, but I will be sure to cherish the
             memories of my last year at Craighead with my "hostel rangers" by my side.
         </p>
 
-        <h2>Staff Profile</h2>
-        <h3>Dave Hullen</h3>
+        <h3>Yr 9 German</h3>
+        <p>
+            In the Year 9 German class, we have been learning about how the Fasching festival is celebrated around
+            Germany and combining this with learning the colours so we can describe our colourful Faschingsmaske! Do you
+            recognise the faces behind the masks?
+        </p>
 
-        <ul>
-            <li>Why do you love teaching?</li>
+        <h3>Staff Profile</h3>
+        <h4>Dave Hullen</h4>
+
+        <div>
+            <p id="list">Why do you love teaching?</p>
             <p>I enjoy seeing students create what they imagine.</p>
-            <li>What/who inspires you about your teaching subject?</li>
+            <p id="list">What/who inspires you about your teaching subject?</p>
             <p>The students' capabilities inspire me.</p>
-            <li>What is your favourite pastime?</li>
+            <p id="list">What is your favourite pastime?</p>
             <p>Spending time with whānau.</p>
-            <li>A fun fact about you...</li>
-            <p>I didn't know what PTO in the corner of a piece of paper meant until recently. It still keeps me up at
-                night how much I might have missed out on.</p>
-        </ul>
+            <p id="list">A fun fact about you...</p>
+            <p>I didn't know what PTO in the corner of a piece of paper meant until recently.</p> 
+            <p>It still keeps me up at night how much I might have missed out on.</p>
+        </div>
+
+        <div id="images">
+            <img src="images/glenys-parry-asg-neita-award-2018.jpg" alt="Glenys Parry">
+            <img src="images/wanaka-a-and-p-show.jpg" alt="Wanaka A and P Show">
+            <img src="images/s-oneill.jpg.JPG" alt="Samantha O'Neill">
+            <img src="images/mr-hullen.jpg" alt="Mr Hullen">
+            <img src="images/digitech-logo.jpg" alt="Digitech">
+        </div id>
     </main>
 
     <footer>
