--- a/html/school-trips.html
+++ b/html/school-trips.html
@@ -79,13 +79,16 @@
             week.
         </p>
 
-        <div>
-        <img src="../images/y11-bio.jpg" alt="Yr12 Geoography">
-        <img src="../images/y11-history-1.jpg" alt="Yr11 History 1">
-        <img src="../images/y11-history-2.jpg" alt="Yr11 History 2">
-        <img src="../images/y11-history-3.jpg" alt="Yr11 History 3">
-        <img src="../images/y11-history-4.jpg" alt="Yr11 History 4">
-        <img src="../images/y11-history-5.jpg" alt="Yr11 History 5">
+        <div id="images">
+            <img src="../images/y11-bio.jpg" alt="Yr12 Geoography">
+            <img src="../images/y11-history-1.jpg" alt="Yr11 History 1">
+            <img src="../images/y11-history-2.jpg" alt="Yr11 History 2">
+            <img src="../images/y11-history-3.jpg" alt="Yr11 History 3">
+            <img src="../images/y11-history-4.jpg" alt="Yr11 History 4">
+            <img src="../images/y11-history-5.jpg" alt="Yr11 History 5">
+            <img src="../images/y12-geo-1.png" alt="Yr12 Geo 1">
+            <img src="../images/y12-geo-2.png" alt="Yr12 Geo 2">
+            <img src="../images/y12-geo-3.png" alt="Yr12 Geo 3">
         </div>
     </main>
 
