--- a/html/sports.html
+++ b/html/sports.html
@@ -61,7 +61,7 @@
 
         <div id="images">
         <img src="../images/ava-young.jpg.JPG" alt="Ava Young">
-        <img src="../images/2021-athletic-sports-champions.jpg" alt="Athletics Champions">
+        <img id="sports" src="../images/2021-athletic-sports-champions.jpg" alt="Athletics Champions">
         </div>
     </main>
 
