--- a/html/notices.html
+++ b/html/notices.html
@@ -77,7 +77,8 @@
             filling our minds with God's words. Of reading a daily Psalm or engaging in a Bible App. Phillipians 4:8
             puts it: "Fix your thoughts on what is true and honorable, and right, and pure, and lovely, and admirable."
             DaVine Youth Group 6:30-8:30pm every Wednesday.
-            Easter Camp 2021 - 1-5th April for more details check out https://eastercamp.org/ or see Rev. Lucy
+            Easter Camp 2021 - 1-5th April for more details check out 
+            <a href="https://eastercamp.org/">eatercamp.org</a> or see Rev. Lucy
             Grace and Peace, Rev. Lucy, Chaplain
         </p>
 
@@ -90,7 +91,7 @@
 
             Applications close throughout the year, with tens of millions of dollars available. MoneyHub has also
             published a list of tips for scholarship success. For more details and to find suitable scholarships, visit
-            https://www.moneyhub.co.nz/scholarships-nz.html
+            <a href="//www.moneyhub.co.nz/scholarships-nz.html">moneyhub.co.nz</a>
 
             Midwifery Information Session (Timaru Ara campus)
             Learn what’s involved in becoming a midwife.
@@ -99,7 +100,7 @@
             region.
             17 March 2021, 4.00pm - 5.30pm
 
-            Register online at https://www.ara.ac.nz/products/experience/exp0036-midwifery-information-session/ or
+            Register online at <a href="https://www.ara.ac.nz/products/experience/exp0036-midwifery-information-session/">arapolytechnic.co.nz</a>" or
             contact Mrs Vicky Campbell in the Careers Office – campbellvi@craighead.school.nz.
 
             The Female-only Defence Careers Experience (DCE) to be held at Burnham Military Camp on 28–30 April, is
@@ -108,14 +109,14 @@
             career option, with leadership and resilience skills development and the chance to mix and mingle with
             likeminded people.
             A reminder that registrations close on 19 March 2021:
-            https://docs.google.com/forms/d/1Z5XPEmNl9RcBKJzmusU31WHff4X_dhccY196pe-8sRY/edit?ts=6036d126&gxids=7628
+            <a href="https://docs.google.com/forms/d/1Z5XPEmNl9RcBKJzmusU31WHff4X_dhccY196pe-8sRY/edit?ts=6036d126&gxids=7628">google.form.com</a>
         </p>
 
         <h3>Guidance</h3>
         <p>A link to our Wellbeing website is located on the CDS website Home page. A "Parenting Portal" is located as a
             subpage on the
             Wellbeing site HOME tab.
-            https://sites.google.com/craighead.school.nz/studentswellbeingsite/home/parent-portal
+            <a href="https://sites.google.com/craighead.school.nz/studentswellbeingsite/home/parent-portal">craigheadstudentwellbeing.nz</a>
         </p>
         <div id="images">
         <img src="../images/kaitlyn-pud.jpg" alt="Nikita and Pud">
